# src/rust/oikos_web/src/pages/planning.rs
@@ -1,25 +1,147 @@
 use crate::components::Tabs;
-use crate::components::Token;
-use yew::prelude::*;
+use crate::{
+    components::Token,
+    root::{AppRoute, DataHandle},
+    services::{Error, MealPlansService, RecipeService},
+};
+use oikos_api::components::schemas::{MealPlans, RecipeList};
+use yew::{prelude::*, services::fetch::FetchTask};
+use yew_router::{
+    agent::RouteRequest,
+    prelude::{Route, RouteAgentDispatcher},
+    RouterState,
+};
+use yew_state::SharedStateComponent;
+use yewtil::NeqAssign;
 
-pub struct PlanningPage;
+pub struct PlanningPageComponent<STATE: RouterState = ()> {
+    handle: DataHandle,
+    recipes_service: RecipeService,
+    meal_plans_service: MealPlansService,
+    router: RouteAgentDispatcher<STATE>,
+    recipes_task: Option<FetchTask>,
+    recipes_response: Callback<Result<RecipeList, Error>>,
+    meal_plans_task: Option<FetchTask>,
+    meal_plans_response: Callback<Result<MealPlans, Error>>,
+}
 
-impl Component for PlanningPage {
-    type Message = ();
-    type Properties = ();
-    fn create(_: Self::Properties, _link: ComponentLink<Self>) -> Self {
-        Self
+pub enum Message {
+    ChangeRoute(AppRoute),
+    RecipesResponse(Result<RecipeList, Error>),
+    MealPlansResponse(Result<MealPlans, Error>),
+}
+
+impl<STATE: RouterState> PlanningPageComponent<STATE> {
+    fn get_recipes(&mut self) {
+        self.recipes_task = Some(
+            self.recipes_service
+                .get_recipes(self.recipes_response.clone()),
+        );
     }
 
-    fn update(&mut self, _msg: Self::Message) -> ShouldRender {
-        false
+    fn get_meal_plans(&mut self) {
+        self.meal_plans_task = Some(
+            self.meal_plans_service
+                .get_meal_plans(self.meal_plans_response.clone()),
+        );
+    }
+}
+
+impl<STATE: RouterState> Component for PlanningPageComponent<STATE> {
+    type Message = Message;
+    type Properties = DataHandle;
+    fn create(handle: Self::Properties, link: ComponentLink<Self>) -> Self {
+        Self {
+            handle,
+            recipes_service: RecipeService::new(),
+            meal_plans_service: MealPlansService::new(),
+            router: RouteAgentDispatcher::new(),
+            recipes_task: None,
+            recipes_response: link.callback(Message::RecipesResponse),
+            meal_plans_task: None,
+            meal_plans_response: link.callback(Message::MealPlansResponse),
+        }
     }
 
-    fn change(&mut self, _props: Self::Properties) -> ShouldRender {
-        false
+    fn rendered(&mut self, first_render: bool) {
+        if first_render {
+            self.get_meal_plans();
+            self.get_recipes();
+        }
+    }
+
+    fn update(&mut self, msg: Self::Message) -> ShouldRender {
+        match msg {
+            Message::RecipesResponse(Ok(recipes)) => {
+                self.handle
+                    .reduce(move |state| state.recipes = Some(recipes));
+                self.recipes_task = None;
+            }
+            Message::RecipesResponse(Err(_)) => {
+                self.recipes_task = None;
+            }
+            Message::MealPlansResponse(Ok(meal_plans)) => {
+                self.handle
+                    .reduce(move |state| state.meal_plans = Some(meal_plans));
+                self.meal_plans_task = None;
+            }
+            Message::MealPlansResponse(Err(_)) => {
+                self.meal_plans_task = None;
+            }
+            Message::ChangeRoute(route) => {
+                let route = Route::from(route);
+                self.router.send(RouteRequest::ChangeRoute(route));
+            }
+        }
+        true
+    }
+
+    fn change(&mut self, handle: Self::Properties) -> ShouldRender {
+        self.handle.neq_assign(handle)
     }
 
     fn view(&self) -> Html {
+        let recipes = self.handle.state().recipes.clone().unwrap_or_else(Vec::new);
+
+        let meal_list = self
+            .handle
+            .state()
+            .meal_plans
+            .clone()
+            .map(|meal_plans| {
+                meal_plans
+                    .iter()
+                    .map(|meal| {
+                        let recipes = meal
+                            .recipes
+                            .iter()
+                            .filter_map(|recipe_meal| {
+                                recipes
+                                    .iter()
+                                    .find(|recipe| recipe.id == recipe_meal.id)
+                                    .map(|recipe| {
+                                        html! {
+                                            <li>{recipe.name.clone()}</li>
+                                        }
+                                    })
+                            })
+                            .collect::<Html>();
+
+                        html! {
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="card-title">{meal.date.clone()}</span>
+                                    <ul>
+                                        {recipes}
+                                    </ul>
+                                </div>
+                            </div>
+                        }
+                    })
+                    .collect::<Html>()
+            })
+            .unwrap_or_else(|| html! { <></> });
+
         html! {
             <>
                 <Token/>
@@ -27,29 +149,7 @@ impl Component for PlanningPage {
                 <div class="container">
                     <div class="row">
                         <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="https://www.tipiak.fr/sites/default/files/styles/image_detail/public/recettes/images/Couscous-marocain-TIPIAK.jpg?itok=Ez-4eRy5"/>
-                            </div>
-                            <div class="card-content">
-                            <span class="card-title">{"Couscous"}</span>
-                            <p>{"Lundi 11 janvier"}</p>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="https://img.cuisineaz.com/660x660/2018-11-09/i144059-garniture-pour-fajitas-au-cookeo.jpeg"/>
-                            </div>
-                            <div class="card-content">
-                            <span class="card-title">{"Fajitas"}</span>
-                            <p>{"Mardi 12 janvier"}</p>
-                            </div>
-                        </div>
+                            {meal_list}
                         </div>
                     </div>
                 </div>
@@ -57,3 +157,5 @@ impl Component for PlanningPage {
         }
     }
 }
+
+pub type PlanningPage = SharedStateComponent<PlanningPageComponent>;
